Use server side operation name format for mpRestClient spans

--- a/tck/rest-client/pom.xml
+++ b/tck/rest-client/pom.xml
@@ -42,5 +42,11 @@
             <version>${version.mp.rest.client}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.microprofile.config</groupId>
+            <artifactId>microprofile-config-api</artifactId>
+            <version>${version.mp.config}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
